# nft-analyst-starter-pack

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  export_data.py  export_data_v2.py  metadata.csv  metadata_0x2079812353E2C9409a788FBF5f383fa62aD85bE8.csv  metadata_0xED5AF388653567Af2F388E6224dC7C4b3241C544.csv  pyproject.toml  requirements.txt  sales.csv  sales_0x2079812353E2C9409a788FBF5f383fa62aD85bE8.csv
.ipynb_checkpoints/: get-metadata-checkpoint.ipynb  get-opensea-sales-checkpoint.ipynb
core/: generate_metadata_output.py  generate_sales_output.py  generate_transfers_output.py
jobs/: cleanup_outputs.py  export_1155_transfers.py  export_logs.py  export_recent_block.py  export_token_transfers.py  export_update_logs.py  get_nft_metadata.py  get_nft_metadata_v2.py  get_nft_sales.py  get_nft_sales_v2.py  get_nft_transfers.py  get_nft_transfers_v2.py  get_recent_block.py  update_block_to_date_mapping.py  update_eth_prices.py  update_eth_prices_v2.py
raw-data/: date_block_mapping.csv  eth_prices.csv  raw_attributes.csv  transaction_hashes.txt
update-logs/: 0xED5AF388653567Af2F388E6224dC7C4b3241C544.csv
utils/: check_contract_support.py  eth_service.py  extract_unique_column_value.py  find_deployment_block_for_contract.py  simplehttp.py
