[tool.poetry]
name = "nft-analyst-starter-pack"
version = "0.1.0"
description = ""
authors = ["dmatsuoka <dmmatsuoka@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.22.2"
httpx = "^0.23.0"
pandas = "^1.4.1"
ethereum-etl = "^1.10.1"
click = "^7.1.2"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
